--- a/package.json
+++ b/package.json
@@ -33,5 +33,5 @@
   "bugs": {
     "url": "https://github.com/IamNainabhuva/Assignment1.git"
   },
-  "homepage": "https://github.com/IamNainabhuva/Assignment1.gitt#readme"
+  "homepage": "https://github.com/IamNainabhuva/Assignment1.git#readme"
 }
