--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   "main": "server.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/IamNainabhuva/Assignment1.git"
+    "url": "git+https://github.com/IamNainabhuva/NP.git"
   },
   "author": "Nayna Bhuva",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/IamNainabhuva/Assignment1.git"
+    "url": "https://github.com/IamNainabhuva/NP.git"
   },
-  "homepage": "https://github.com/IamNainabhuva/Assignment1.git#readme"
+  "homepage": "https://github.com/IamNainabhuva/NP.git#readme"
 }
